--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
+<!--    4 строчки ниже для совпадения проекта с учебным репозиторием - moment flatpickr подключали импортом в компонентах (закомментировано) и устанавливали через npm i-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/locale/en-ie.js"></script>
     <title>TASKMANAGER</title>
   </head>
 
